Fixed last turn managing